Somma e accesso diretto a arraylist con varhandle